js with both before helper function and after

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <body>
 
     <h1>Unsplash API Infinite scroll</h1>
+
+    <!-- loader -->
 <div class="loader" id="loader" hidden>
     <img src="loaderpac.svg" alt="Loading"  >
 </div>
+
+    <!-- image container -->
+    <div class="image-container" id="image-container"></div>
+
 
     <script src="script.js"></script>
 </body>
