--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Unsplash API Infinite scroll</h1>
 
     <!-- loader -->
-<div class="loader" id="loader" hidden>
+<div class="loader" id="loader">
     <img src="loaderpac.svg" alt="Loading"  >
 </div>
 
