--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h1>Unsplash API Infinite scroll</h1>
+    <h1>Unsplash API Infinite Scroll</h1>
 
     <!-- loader -->
 <div class="loader" id="loader">
