--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinite Scroll</title>
 
-    <link rel="icons" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link
+      rel="icons"
+      type="image/png"
+      href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="mvcon7.svg" />
+  </head>
+  <body>
     <h1>Unsplash API Infinite Scroll</h1>
 
     <!-- loader -->
-<div class="loader" id="loader">
-    <img src="loaderpac.svg" alt="Loading"  >
-</div>
+    <div class="loader" id="loader">
+      <img src="loaderpac.svg" alt="Loading" />
+    </div>
 
     <!-- image container -->
     <div class="image-container" id="image-container"></div>
 
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
