--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1>Unsplash API Infinite Scroll</h1>
+
+    <h1>Infinite Scroll project</h1>
 
     <!-- loader -->
     <div class="loader" id="loader">
